@@ -9,13 +9,15 @@
 package org.elasticsearch.gradle.internal;
 
 import com.github.jengelman.gradle.plugins.shadow.ShadowBasePlugin;
+
 import org.elasticsearch.gradle.OS;
-import org.elasticsearch.gradle.internal.test.SimpleCommandLineArgumentProvider;
-import org.elasticsearch.gradle.internal.test.SystemPropertyCommandLineArgumentProvider;
+import org.elasticsearch.gradle.internal.conventions.util.Util;
 import org.elasticsearch.gradle.internal.info.BuildParams;
 import org.elasticsearch.gradle.internal.info.GlobalBuildInfoPlugin;
 import org.elasticsearch.gradle.internal.test.ErrorReportingTestListener;
-import org.elasticsearch.gradle.internal.conventions.util.Util;
+import org.elasticsearch.gradle.internal.test.SimpleCommandLineArgumentProvider;
+import org.elasticsearch.gradle.test.GradleTestPolicySetupPlugin;
+import org.elasticsearch.gradle.test.SystemPropertyCommandLineArgumentProvider;
 import org.gradle.api.Action;
 import org.gradle.api.JavaVersion;
 import org.gradle.api.Plugin;
@@ -41,6 +43,7 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
 
     @Override
     public void apply(Project project) {
+        project.getPluginManager().apply(GradleTestPolicySetupPlugin.class);
         // for fips mode check
         project.getRootProject().getPluginManager().apply(GlobalBuildInfoPlugin.class);
         // Default test task should run only unit tests
@@ -92,8 +95,13 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
                             "--add-opens=java.base/java.net=ALL-UNNAMED",
                             "--add-opens=java.base/javax.net.ssl=ALL-UNNAMED",
                             "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
-                            "--add-opens=java.base/java.time=ALL-UNNAMED"
+                            "--add-opens=java.base/java.time=ALL-UNNAMED",
+                            "--add-opens=java.management/java.lang.management=ALL-UNNAMED"
                         );
+                    }
+                    if (BuildParams.getIsRuntimeJavaHomeSet() == false
+                        || BuildParams.getRuntimeJavaVersion().isCompatibleWith(JavaVersion.VERSION_18)) {
+                        test.jvmArgs("-Djava.security.manager=allow");
                     }
                 }
             });
@@ -125,12 +133,8 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
             Map<String, String> sysprops = Map.of(
                 "java.awt.headless",
                 "true",
-                "tests.gradle",
-                "true",
                 "tests.artifact",
                 project.getName(),
-                "tests.task",
-                test.getPath(),
                 "tests.security.manager",
                 "true",
                 "jna.nosys",
@@ -146,14 +150,8 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
             }
 
             // don't track these as inputs since they contain absolute paths and break cache relocatability
-            File gradleHome = project.getGradle().getGradleUserHomeDir();
-            String gradleVersion = project.getGradle().getGradleVersion();
-            nonInputProperties.systemProperty("gradle.dist.lib", new File(project.getGradle().getGradleHomeDir(), "lib"));
-            nonInputProperties.systemProperty(
-                "gradle.worker.jar",
-                gradleHome + "/caches/" + gradleVersion + "/workerMain/gradle-worker.jar"
-            );
-            nonInputProperties.systemProperty("gradle.user.home", gradleHome);
+            File gradleUserHome = project.getGradle().getGradleUserHomeDir();
+            nonInputProperties.systemProperty("gradle.user.home", gradleUserHome);
             // we use 'temp' relative to CWD since this is per JVM and tests are forbidden from writing to CWD
             nonInputProperties.systemProperty("java.io.tmpdir", test.getWorkingDir().toPath().resolve("temp"));
 
@@ -200,7 +198,7 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
                     SourceSetContainer sourceSets = project.getExtensions().getByType(SourceSetContainer.class);
                     FileCollection mainRuntime = sourceSets.getByName(SourceSet.MAIN_SOURCE_SET_NAME).getRuntimeClasspath();
                     // Add any "shadow" dependencies. These are dependencies that are *not* bundled into the shadow JAR
-                    Configuration shadowConfig = project.getConfigurations().getByName(ShadowBasePlugin.getCONFIGURATION_NAME());
+                    Configuration shadowConfig = project.getConfigurations().getByName(ShadowBasePlugin.CONFIGURATION_NAME);
                     // Add the shadow JAR artifact itself
                     FileCollection shadowJar = project.files(project.getTasks().named("shadowJar"));
                     FileCollection testRuntime = sourceSets.getByName(SourceSet.TEST_SOURCE_SET_NAME).getRuntimeClasspath();
